# ctdt

./: .gitignore  CMakeLists.txt  README.md  ctdt.hpp  tests.cpp
tests/: CMakeLists.txt  binaryop.cpp  tests.cpp  unaryop.cpp
